# stash

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: common.rs  errors.rs  lib.rs  list.rs  main.rs  mountpoint.rs  trash.rs  trash_dir.rs  trash_info.rs
tests/: list.rs
