[package]
name = "stash-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
thiserror = "1.0.39"
time = { version = "0.3.20", features = ["formatting", "parsing", "macros", "local-offset"] }
rand = "0.8.5"
clap = { version = "4.1.8", features = ["derive"] }

[dev-dependencies]
uuid = { version = "0.8.1", features = ["v4"] }
